{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 46,
  "lineage": "0d01d6c0-b1c0-7369-b85e-1ad5c789b32c",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.224.138.48",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-03-25T10:56:26.153-07:00",
            "id": "projects/tensile-impulse-462216-c3/regions/us-central1/addresses/chess-app-static-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "chess-app-static-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "tensile-impulse-462216-c3",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tensile-impulse-462216-c3/regions/us-central1/addresses/chess-app-static-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-25T10:56:47.573-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tensile-impulse-462216-c3/global/firewalls/chess-app-allow-http-https",
            "log_config": [],
            "name": "chess-app-allow-http-https",
            "network": "https://www.googleapis.com/compute/v1/projects/tensile-impulse-462216-c3/global/networks/chess-app-vpc",
            "priority": 1000,
            "project": "tensile-impulse-462216-c3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tensile-impulse-462216-c3/global/firewalls/chess-app-allow-http-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-03-25T10:56:48.307-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tensile-impulse-462216-c3/global/firewalls/chess-app-allow-internal",
            "log_config": [],
            "name": "chess-app-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/tensile-impulse-462216-c3/global/networks/chess-app-vpc",
            "priority": 1000,
            "project": "tensile-impulse-462216-c3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tensile-impulse-462216-c3/global/firewalls/chess-app-allow-internal",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_nodeports",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-25T10:56:48.208-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tensile-impulse-462216-c3/global/firewalls/chess-app-allow-nodeports",
            "log_config": [],
            "name": "chess-app-allow-nodeports",
            "network": "https://www.googleapis.com/compute/v1/projects/tensile-impulse-462216-c3/global/networks/chess-app-vpc",
            "priority": 1000,
            "project": "tensile-impulse-462216-c3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tensile-impulse-462216-c3/global/firewalls/chess-app-allow-nodeports",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-25T10:56:47.520-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/tensile-impulse-462216-c3/global/firewalls/chess-app-allow-ssh",
            "log_config": [],
            "name": "chess-app-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/tensile-impulse-462216-c3/global/networks/chess-app-vpc",
            "priority": 1000,
            "project": "tensile-impulse-462216-c3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tensile-impulse-462216-c3/global/firewalls/chess-app-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/tensile-impulse-462216-c3/global/networks/chess-app-vpc",
            "mtu": 0,
            "name": "chess-app-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8160952363904507686",
            "project": "tensile-impulse-462216-c3",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tensile-impulse-462216-c3/global/networks/chess-app-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-25T10:56:48.284-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/tensile-impulse-462216-c3/regions/us-central1/subnetworks/chess-app-subnet",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "chess-app-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/tensile-impulse-462216-c3/global/networks/chess-app-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "tensile-impulse-462216-c3",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tensile-impulse-462216-c3/regions/us-central1/subnetworks/chess-app-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}